breakout into two posts -- jekyll continuous delivery and shipit

--- a/src/_posts/2015-11-05-shipit.md
+++ b/src/_posts/2015-11-05-shipit.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Exploring ShipIt with CircleCI and Jekyll
+title: Exploring ShipIt
 date: 2015-11-05 08:00:00
-permalink: /blog/jekyll-circleci-shipit
-tags: [shipit, jekyll]
+permalink: /blog/shipit
+tags: [shipit]
 excerpt: Continuously deploying your Jekyll sites with ShipIt
 seo_title: Jekyll continuous integration with CircleCI and ShipIt
 seo_description: Continuously deploying your Jekyll sites with CircleCI and ShipIT
