first draft on shipit complete

--- a/src/_posts/2015-11-04-shipit.md
+++ b/src/_posts/2015-11-04-shipit.md
@@ -4,84 +4,202 @@ title: Exploring ShipIt
 date: 2015-11-04 08:00:00
 permalink: /blog/shipit
 tags: [shipit]
-excerpt: Continuously deploying your Jekyll sites with ShipIt
-seo_title: Jekyll continuous integration with CircleCI and ShipIt
-seo_description: Continuously deploying your Jekyll sites with CircleCI and ShipIT
+excerpt: A dive into the Javascript deployment tool, Shipit. You'll find that it's very similar to Grunt and Gulp. And much simpler than Capistrano.
+seo_title: ShipIt - The Javascript and NodeJS deployment tool
+seo_description: Learn how to use Shipit deployment tool to ship your apps. Very similar to gulp and grunt. Great if you build in NodeJS or Javascript.
+disqus_id: '2015-11-04-shipit'
 ---
 
-I recently ported my site from WordPress to Jekyll and couldn't be happier. I have a great new portable toolset that feels more suitable for myself as a developer. The only missing piece felt like automated deployments. I was still `ssh`ing into my server, pulling down my repo, and running my build tasks. This felt wrong compared to what we do at <a href="https://robinpowered.com">Robin Powered</a> with <a href="https://travis-ci.org/">Travis Continuous Integrations</a> and <a href="http://capistranorb.com/">Capistrano</a> to continuously release our applications in an automated way.
+Shipit is... awesome.
 
-## F*ck it, ShipIt
+Really, though. I've found this to be a fantastic tool for managing my release process. Albeit I'm only using this for my personal website at this time, I can see how I'd use this for continuously deploying at my day job. Over there we use Capistrano, and there's many parallels between the two. Let's start by looking at how it works, and then we'll compare.
 
-First, I didn't want to use Capistrano. I use it at work, and being a JS person and not a Ruby person, I didn't feel at home with it. It was something I could tweak if I needed to change my deployment process, but to start from scratch I was ready to try something new.
+## How it works
 
-This is when I discovered [Shipit](https://github.com/shipitjs/shipit).
+Chances are you're familiar with <a href="https://github.com/gruntjs/grunt">grunt</a> or <a href="https://github.com/gulpjs/gulp">gulp</a>. Aside from them both being build task managers, they both are common in that they have a file that you use to define the tasks, a `gruntfile` or a `gulpfile`, respectively. When you want to run a task they locate this file and execute the defined tasks that are referenced. Shipit works the same way with a `shipitfile` and a command line invocation.
 
+First, make sure you have `shipit` installed
 
-At it's simplest level, you can define a server for the module to connect to and a task to run on the server. This example is from <a href="https://github.com/shipitjs/shipit#getting-started">Getting Started</a> on the project readme.
+{% highlight sh %}
+npm install -g shipit-cli
+{% endhighlight %}
 
-`shipitfile.js`
+And once we get to the `shipitfile`, you'll be able to run deployments as you would run a build with `grunt` or `gulp`.
+
+{% highlight sh %}
+shipit production deploy
+{% endhighlight %}
+
+This command is made up of three things:
+
+1. `shipit` -- the executable
+2. `production` -- the environment
+3. `deploy` -- the task
+
+## Shipitfile
+
+The first thing you're going to do is create a file called `shipitfile.js`. Let's look to the simple example from the <a href="https://github.com/shipitjs/shipit">readme</a>.
+
 {% highlight javascript %}
 module.exports = function (shipit) {
   shipit.initConfig({
     staging: {
-      servers: 'myproject.com'  
+      servers: 'myproject.com'
     }
   });
 
   shipit.task('pwd', function () {
-    shipit.remote('pwd');
-  }):
+    return shipit.remote('pwd');
+  });
 };
 {% endhighlight %}
 
-Running the shipit command
+This, again, is pretty similar to *both* `grunt` and `gulp`.
 
-{% highlight sh %}
-shipit staging pwd
-{% endhighlight %}
+### Grunt similarities
 
-This will connect to the remote server, `myproject.com` and remotely execute the `pwd` command. Additional configuration options can be supplied to detail authentication issues for the server, but these can also be part of your `~/.ssh/config` file and treat it more as an environment configuration (I'd recommend this, personally).
-
-## Deploying Jekyll
-
-The next thing I discovered was the <a href="https://github.com/shipitjs/shipit-deploy">shipit-deploy</a> module. This facilitates the `shipit` module for performing deployments similar to `capistrano`. Shipit, on its own, makes provisioning applications with shell commands easier, but out of the box it doesn't have functional deployment built in. This is where `shipit-deploy` comes in.
-
-<a href="#">My shipitfile</a> looks like this:
+It's similar to grunt because we declaratively create a configuration for the environment. Just like `grunt`, we can define multiple configuration modes in addition to a set of defaults.
 
 {% highlight javascript %}
-var path = require('path');
+shipit.initConfig({
+  default: {
+    foo: 'bar',
+    hello: 'world'
+  },
+  staging: {
+    foo: 'BAR'
+  },
+  production: {
+    hello: 'WORLD'
+  }
+});
+{% endhighlight %}
 
+You get the gist. If we were to run `shipit staging XYZ`, it's going to use the staging configuration rules first, and then the default to default to the rest of the configuration. If we were to run `shipit production XYZ`, same idea -- it'll use the production configuration followed by coalescing with the default configuration.
+
+### Gulp similarities
+
+It's similar to gulp because we functionally compose our tasks.
+
+{% highlight javascript %}
+shipit.task('createFile', function () {
+  return shipit.remote('touch helloworld.txt');
+});
+
+shipit.task('writeFile', function () {
+  return shipit.remote('echo "hello, world!" > helloworld.txt');
+});
+{% endhighlight %}
+
+These will run just like how you might run a gulp task -- `shipit production createFile` and `shipit production writeFile`.
+
+And, you may have guessed it, yes, you can define dependency tasks for other tasks like so:
+
+{% highlight javascript %}
+// createFile will run as a dependency before `writeFile` executes
+shipit.task('writeFile', ['createFile'], function () {
+  return shipit.remote('echo "hello, world!" > helloworld.txt');
+});
+{% endhighlight %}
+
+Why is this so familiar? They both use <a href="https://github.com/orchestrator/orchestrator">Orchestrator</a> for sequencing and executing their tasks. So whatever you're familiar with in `gulp`, you'll feel at home here with `shipit`.
+
+You can think of this almost like a `gulp` file for your server deployments.
+
+
+
+
+## Deploying releases with <a href="https://github.com/shipitjs/shipit-deploy">shipit-deploy</a>
+
+Shipit, on its own, is not a fully integrated release manager. It is an underlying set of organized tools to facilitate with executing remote commands and performing `rsync` to deploy files, but out of the box it is not a release manager.
+
+To take advantage of continuous releases with Shipit comes <a href="https://github.com/shipitjs/shipit-deploy">shipit-deploy</a>. This can be thought of as a predefined set of tasks that take care of building and churning a set of releases. This is where things start to get similar to Capistrano.
+
+First, let's take a look at the `shipitfile` that `shipit-deploy` provides as an example in their <a href="https://github.com/shipitjs/shipit-deploy/blob/master/README.md">readme</a>.
+
+{% highlight javascript %}
 module.exports = function (shipit) {
   require('shipit-deploy')(shipit);
 
   shipit.initConfig({
     default: {
-      workspace: '/tmp/jekyll-portfolio',
-      repositoryUrl: 'https://github.com/ajwhite/jekyll-portfolio.git',
-      ignore: ['.git', 'node_modules'],
-      keepReleases: 5,
+      workspace: '/tmp/github-monitor',
+      deployTo: '/tmp/deploy_to',
+      repositoryUrl: 'https://github.com/user/repo.git',
+      ignores: ['.git', 'node_modules'],
+      keepReleases: 2,
       deleteOnRollback: false,
-      shallowClone: true,
+      key: '/path/to/key',
+      shallowClone: true
+    },
+    staging: {
+      servers: 'user@my-staging-server.com'
     },
     production: {
-      servers: 'deploy@deploy.atticuswhite.com',
-      deployTo: '/var/www/atticuswhite/jekyll-portfolio'
-    },
-    develop: {
-      servers: 'deploy@deploy.atticuswhite.com',
-      deployTo: '/var/www/atticuswhite/dev.jekyll-portfolio'
+      servers: 'user@my-production-server.com'
     }
-  });
-
-  shipit.on('updated', function () {
-    shipit.remote('cd ' + shipit.releasePath + ' && make install');
   });
 };
 {% endhighlight %}
 
-Running the `shipit` command
+That's it. Really. There's nothing more that you have to do than specify your repository, the path on the server you want to deploy to, and the server itself. If you have a well prepared environment, such as having configurations in `~/.ssh/config`, then you don't even need to specify the `key` location or the ssh username. Let's look at what each property does starting with the most important pieces.
 
-{% highlight sh %}
-shipit production deploy
-{% endhighlight %}
+#### `deployTo`
+This is the remote path on your server where you want your releases to live. It **will not be your servable directory**. We'll get to the directory structure that gets generated below.
+
+#### `repositoryUrl`
+You're likely deploying from version control. This would specify where that lives.
+
+#### `staging.servers`, `production.servers`, etc
+First, this is plural because this can be a collection. This is useful if you have multiple instances of your application behind a load balancer. This is the hostname of that(those) box(es).
+
+#### `key`
+This is the path to your private key file. I'd suggest leaving this up to `~/.ssh/config` so that your deployment can be flexible and agnostic to the environment its run on. If you use CircleCI, it will automatically configure a hostname when you set up private SSH keys.
+
+----
+
+Onto the less important configuration details
+
+#### `workspace`
+This is not very significant, and it should probably live in `/tmp` so it will certainly become removed when your reboot. This is simply the "workspace" where `shipit` will deal with fetching and preparing files to sync remotely.
+
+#### `ignores`
+This is a collection of paths, and I believe expressions, that you want your deployment to exclude
+
+#### `keepReleases`
+You can specify how many historical releases you want to to live on your server. We'll go into detail about how this is set up below, but the gist is that you'll want atleast a few that you can rollback to.
+
+#### `deleteOnRollback`
+This is pretty self explanatory -- if you rollback a release, do you want it to also become deleted?
+
+#### `shallowClone`
+Most of the time this will be `true`. This simply refers to the <a href="https://git-scm.com/docs/git-clone">depth of the `git clone`</a>. Typically for builds you're going to be deploying the `HEAD` commit and you won't really need any history of revisions.
+
+
+You can find the whole set of options <a href="https://github.com/shipitjs/shipit-deploy/blob/master/README.md#options">here</a>.
+
+## Release structure
+
+As hinted above, your deployment is not simply a set of files that gets thrown up a directory served by your webserver. This is where things get very similar to <a href="http://capistranorb.com/documentation/getting-started/structure/">Capistrano's structure</a>. Your deployment safely creates a release directory sibling to previous release directories, and simply rotates a symbolic link used by your webserver which points to the latest release. This makes for zero downtime, and it allows you to rotate -- forward or backward.
+
+<img src="/dist/images/blog/shipit/release-structure.png" />
+
+### Serving the right directory
+
+Shipit is going to create a symlink to the latest release, or the latest rollback, named `current/`.
+
+If your `deployTo` path is `/www/application`, then your latest release will always live in `/www/application/current`. If you serve your application from the root of the project, then `current/` is where you're going to want to point it. If, say, you serve it out of a subdirectory, `public/`, then `/www/application/current/public` is where you'll be serving from
+
+
+### Releases
+
+As seen in the release structure there is a directory of `releases/` with many sibling releases of directories named with timestamps. The `current/` is always pointing to the latest release, or the latest rollback. Depending on what you set for `keepReleases`, that will be the number of releases that are kept. As you can assume, Shipit uses a FIFO approach to keep rotating the oldest releases off of your server.
+
+As to clear up any misunderstanding, if we were to look in one of these directories, you'll find your deployed application.
+
+<img src="/dist/images/blog/shipit/release-content.png" />
+
+
+## Real world examples
+
+If you'd like to see how I used Shipit with CircleCI and Jekyll to deploy this website, you can read me other post about <a href="/blog/jekyll-circleci-shipit">continuously deploying Jekyll with Shipit</a>, or simply take a look at <a href="https://github.com/ajwhite/jekyll-portfolio">the repository</a>.
