cleaning up links

--- a/src/_posts/2015-11-04-shipit.md
+++ b/src/_posts/2015-11-04-shipit.md
@@ -10,13 +10,13 @@ seo_description: Learn how to use Shipit deployment tool to ship your apps. Very
 disqus_id: '2015-11-04-shipit'
 ---
 
-Shipit is... awesome.
+<a href="https://github.com/shipitjs/shipit" title="Shipit - An automation engine and deployment tool written for NodeJS" target="_blank">Shipit</a> is... awesome.
 
 Really, though. I've found this to be a fantastic tool for managing my release process. Albeit I'm only using this for my personal website at this time, I can see how I'd use this for continuously deploying at my day job. Over there we use Capistrano, and there's many parallels between the two. Let's start by looking at how it works, and then we'll compare.
 
 ## How it works
 
-Chances are you're familiar with <a href="https://github.com/gruntjs/grunt">grunt</a> or <a href="https://github.com/gulpjs/gulp">gulp</a>. Aside from them both being build task managers, they both are common in that they have a file that you use to define the tasks, a `gruntfile` or a `gulpfile`, respectively. When you want to run a task they locate this file and execute the defined tasks that are referenced. Shipit works the same way with a `shipitfile` and a command line invocation.
+Chances are you're familiar with <a href="https://github.com/gruntjs/grunt" title="Grunt: The JavaScript Task Runner" target="_blank">grunt</a> or <a href="https://github.com/gulpjs/gulp" title="Gulp.js - The streaming build system">gulp</a>. Aside from them both being build task managers, they both are common in that they have a file that you use to define the tasks, a `gruntfile` or a `gulpfile`, respectively. When you want to run a task they locate this file and execute the defined tasks that are referenced. Shipit works the same way with a `shipitfile` and a command line invocation.
 
 First, make sure you have `shipit` installed
 
@@ -38,7 +38,7 @@ This command is made up of three things:
 
 ## Shipitfile
 
-The first thing you're going to do is create a file called `shipitfile.js`. Let's look to the simple example from the <a href="https://github.com/shipitjs/shipit">readme</a>.
+The first thing you're going to do is create a file called `shipitfile.js`. Let's look to the simple example from the <a href="https://github.com/shipitjs/shipit" title="Automation engine and deployment tool">readme</a>.
 
 {% highlight javascript %}
 module.exports = function (shipit) {
@@ -102,20 +102,19 @@ shipit.task('writeFile', ['createFile'], function () {
 });
 {% endhighlight %}
 
-Why is this so familiar? They both use <a href="https://github.com/orchestrator/orchestrator">Orchestrator</a> for sequencing and executing their tasks. So whatever you're familiar with in `gulp`, you'll feel at home here with `shipit`.
+Why is this so familiar? They both use <a href="https://github.com/orchestrator/orchestrator" title="A module for sequencing and executing tasks and dependencies in maximum concurrency" target="_blank">Orchestrator</a> for sequencing and executing their tasks. So whatever you're familiar with in `gulp`, you'll feel at home here with `shipit`.
 
 You can think of this almost like a `gulp` file for your server deployments.
 
 
 
-
-## Deploying releases with <a href="https://github.com/shipitjs/shipit-deploy">shipit-deploy</a>
+## Deploying releases with <a href="https://github.com/shipitjs/shipit-deploy" title="Shipit - An automation engine and deployment tool written for NodeJS" target="_blank">shipit-deploy</a>
 
 Shipit, on its own, is not a fully integrated release manager. It is an underlying set of organized tools to facilitate with executing remote commands and performing `rsync` to deploy files, but out of the box it is not a release manager.
 
-To take advantage of continuous releases with Shipit comes <a href="https://github.com/shipitjs/shipit-deploy">shipit-deploy</a>. This can be thought of as a predefined set of tasks that take care of building and churning a set of releases. This is where things start to get similar to Capistrano.
+To take advantage of continuous releases with Shipit comes <a href="https://github.com/shipitjs/shipit-deploy" title="Set of deplyment tasks for Shipit based on git and rsync commands" target="_blank">shipit-deploy</a>. This can be thought of as a predefined set of tasks that take care of building and churning a set of releases. This is where things start to get similar to Capistrano.
 
-First, let's take a look at the `shipitfile` that `shipit-deploy` provides as an example in their <a href="https://github.com/shipitjs/shipit-deploy/blob/master/README.md">readme</a>.
+First, let's take a look at the `shipitfile` that `shipit-deploy` provides as an example in their <a href="https://github.com/shipitjs/shipit-deploy/blob/master/README.md" title="Shipit README" target="_blank">readme</a>.
 
 {% highlight javascript %}
 module.exports = function (shipit) {
@@ -176,13 +175,13 @@ This is pretty self explanatory -- if you rollback a release, do you want it to 
 Most of the time this will be `true`. This simply refers to the <a href="https://git-scm.com/docs/git-clone">depth of the `git clone`</a>. Typically for builds you're going to be deploying the `HEAD` commit and you won't really need any history of revisions.
 
 
-You can find the whole set of options <a href="https://github.com/shipitjs/shipit-deploy/blob/master/README.md#options">here</a>.
+You can find the whole set of options <a href="https://github.com/shipitjs/shipit-deploy/blob/master/README.md#options" title="Shipit README options" target="_blank">here</a>.
 
 ## Release structure
 
-As hinted above, your deployment is not simply a set of files that gets thrown up a directory served by your webserver. This is where things get very similar to <a href="http://capistranorb.com/documentation/getting-started/structure/">Capistrano's structure</a>. Your deployment safely creates a release directory sibling to previous release directories, and simply rotates a symbolic link used by your webserver which points to the latest release. This makes for zero downtime, and it allows you to rotate -- forward or backward.
+As hinted above, your deployment is not simply a set of files that gets thrown up a directory served by your webserver. This is where things get very similar to <a href="http://capistranorb.com/documentation/getting-started/structure/" title="Capistrano release structure" target="_blank">Capistrano's structure</a>. Your deployment safely creates a release directory sibling to previous release directories, and simply rotates a symbolic link used by your webserver which points to the latest release. This makes for zero downtime, and it allows you to rotate -- forward or backward.
 
-<img src="/dist/images/blog/shipit/release-structure.png" />
+<img src="/dist/images/blog/shipit/release-structure.png" alt="Shipit release structure" />
 
 ### Serving the right directory
 
@@ -197,9 +196,9 @@ As seen in the release structure there is a directory of `releases/` with many s
 
 As to clear up any misunderstanding, if we were to look in one of these directories, you'll find your deployed application.
 
-<img src="/dist/images/blog/shipit/release-content.png" />
+<img src="/dist/images/blog/shipit/release-content.png" alt="Shipit release content" />
 
 
 ## Real world examples
 
-If you'd like to see how I used Shipit with CircleCI and Jekyll to deploy this website, you can read me other post about <a href="/blog/jekyll-circleci-shipit">continuously deploying Jekyll with Shipit</a>, or simply take a look at <a href="https://github.com/ajwhite/jekyll-portfolio">the repository</a>.
+If you'd like to see how I used Shipit with CircleCI and Jekyll to deploy this website, you can read me other post about <a href="/blog/jekyll-circleci-shipit" title="Continuously deploying Jekyll with CircleCI and ShipIt">continuously deploying Jekyll with Shipit</a>, or simply take a look at <a href="https://github.com/ajwhite/jekyll-portfolio" title="Github repository of atticuswhite.com">the repository</a>.
