--- a/src/_posts/2015-11-04-shipit.md
+++ b/src/_posts/2015-11-04-shipit.md
@@ -16,7 +16,7 @@ Really, though. I've found this to be a fantastic tool for managing my release p
 
 ## How it works
 
-Chances are you're familiar with <a href="https://github.com/gruntjs/grunt" title="Grunt: The JavaScript Task Runner" target="_blank">grunt</a> or <a href="https://github.com/gulpjs/gulp" title="Gulp.js - The streaming build system">gulp</a>. Aside from them both being build task managers, they both are common in that they have a file that you use to define the tasks, a `gruntfile` or a `gulpfile`, respectively. When you want to run a task they locate this file and execute the defined tasks that are referenced. Shipit works the same way with a `shipitfile` and a command line invocation.
+Chances are you're familiar with <a href="https://github.com/gruntjs/grunt" title="Grunt: The JavaScript Task Runner" target="_blank">grunt</a> or <a href="https://github.com/gulpjs/gulp" title="Gulp.js - The streaming build system">gulp</a>. Aside from them both being build task managers, they both are common in that they have a file that you use to define the tasks, a `gruntfile` or a `gulpfile`, respectively. When a task is ran, the file is located and the referenced task becomes executed. Shipit works the same way with a `shipitfile` and a command line interface.
 
 First, make sure you have `shipit` installed
 
