--- a/src/_posts/2015-11-04-shipit.md
+++ b/src/_posts/2015-11-04-shipit.md
@@ -4,9 +4,9 @@ title: Exploring ShipIt
 date: 2015-11-04 08:00:00
 permalink: /blog/shipit
 tags: [shipit]
-excerpt: A dive into the Javascript deployment tool, Shipit. You'll find that it's very similar to Grunt and Gulp. And much simpler than Capistrano.
-seo_title: ShipIt - The Javascript and NodeJS deployment tool
-seo_description: Learn how to use Shipit deployment tool to ship your apps. Very similar to gulp and grunt. Great if you build in NodeJS or Javascript.
+excerpt: A dive into the Javascript deployment automation tool, Shipit. You'll find that it's very similar to Grunt and Gulp. And much simpler than Capistrano.
+seo_title: ShipIt - The Javascript deployment automation tool
+seo_description: Learn how to use the Javascript Shipit deployment tool to continuously ship your apps. Create shipit tasks just as you would with gulp or grunt.
 disqus_id: '2015-11-04-shipit'
 ---
 
