--- a/src/_posts/2015-11-04-shipit.md
+++ b/src/_posts/2015-11-04-shipit.md
@@ -4,6 +4,7 @@ title: Exploring ShipIt
 date: 2015-11-04 08:00:00
 permalink: /blog/shipit
 tags: [shipit]
+project: https://github.com/shipitjs/shipit
 excerpt: A dive into the Javascript deployment automation tool, Shipit. You'll find that it's very similar to Grunt and Gulp. And much simpler than Capistrano.
 seo_title: ShipIt - The Javascript deployment automation tool
 seo_description: Learn how to use the Javascript Shipit deployment tool to continuously ship your apps. Create shipit tasks just as you would with gulp or grunt.
