slackify tagged with slack tag

--- a/src/_posts/2016-02-28-slackify.md
+++ b/src/_posts/2016-02-28-slackify.md
@@ -4,7 +4,7 @@ title: Slackify - Upload files with Node JS to Slack from the CLI
 date: 2016-02-28 20:00:00
 permalink: /blog/node-slackify-cli
 project: https://github.com/ajwhite/slackify
-tags: [nodejs, js]
+tags: [slack, nodejs, js]
 excerpt: A CLI tool to upload files, or pipe standard input, into Slack. As developers, we've got our CLI in our working directory all day. Plenty of times we want to share a file, snippet, or some other CLI output with someone else on our team. With Slackify you can take a file, or pipe some output, right into Slack to a specific channel or user.
 seo_description: Upload a file or pipe standard input right from your CLI to Slack. Built with NodeJS and available on NPM.
 disqus_id: '2016-02-28-slackify'
