--- a/src/_posts/2016-02-28-slackify.md
+++ b/src/_posts/2016-02-28-slackify.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Slackify - Upload files with Node JS to Slack from the CLI
+title: Slackify - Upload files from the CLI with Node JS to Slack
 date: 2016-02-28 20:00:00
 permalink: /blog/node-slackify-cli
 project: https://github.com/ajwhite/slackify
 tags: [slack, nodejs, js]
-excerpt: A CLI tool to upload files, or pipe standard input, into Slack. As developers, we've got our CLI in our working directory all day. Plenty of times we want to share a file, snippet, or some other CLI output with someone else on our team. With Slackify you can take a file, or pipe some output, right into Slack to a specific channel or user.
+excerpt: A CLI tool to upload files, or pipe standard input, into Slack. As developers, we're already in our working directory in our console all day. Often we want to share a file, snippet, or some command output with someone on our team. With Slackify you can take a file, or pipe some output, right into Slack to a specific channel or user.
 seo_description: Upload a file or pipe standard input right from your CLI to Slack. Built with NodeJS and available on NPM.
 disqus_id: '2016-02-28-slackify'
 ---
@@ -14,15 +14,17 @@ disqus_id: '2016-02-28-slackify'
 
 ### Because keyboards are better than mice.
 
-<img src="https://cloud.githubusercontent.com/assets/656630/13386068/3d2d1bd4-de76-11e5-9687-bc76a32ee96b.gif" style="width:100%; max-width: 100%; max-height: none;" />
+<img src="https://cloud.githubusercontent.com/assets/656630/13386068/3d2d1bd4-de76-11e5-9687-bc76a32ee96b.gif"
+  alt="Slackify"
+  style="width:100%; max-width: 100%; max-height: none;" />
 
-<a href="https://github.com/ajwhite/slackify" target="_blank" title="Slackify - Upload files with NodeJS to Slack from the CLI">Slackify</a> is a CLI tool for uploading files from your workspace, or piping standard input, to Slack. I've found myself frequently doing these things by hand. Whether it was copying console output, or dragging files, as a developer I don't want to deal with the GUI when what I want to share is right there in the console. If I can just pipe my output into Slack, I'll be happy for the day. So, do you too want to be happy?
+<a href="https://github.com/ajwhite/slackify" target="_blank" title="Slackify - Upload files with NodeJS to Slack from the CLI">Slackify</a> is a CLI tool for uploading files from your workspace, or piping standard input, to Slack. I've found myself frequently doing these things by hand. Whether it was copying console output, or dragging files, as a developer I don't want to deal with the GUI when what I want to share is right there in the console. If I can just pipe my output into Slack, I'll be happy for the day.
 
 
 
 # Bringing the Slack to the CLI
 
-You've got a file, `filename`, and you want to share it on channel, `channelname`:
+You've got a file, `filename`, and you want to share it on channel, `channelname`.
 
 `slackify filename channelname`
 
@@ -119,16 +121,20 @@ Sending an entire file can sometimes be unnecessary, or even a burden if it's la
 
 A comment be added to the uploaded file with the `--message` or `-m` flag.
 
-`slackify filename -m 'my comment'
+`slackify filename -m 'my comment'`
 
 # Piping Standard Input
 
-This is my favorite feature of Slackify. Every now and then I'll get a question from someone on the team why their build script failed (ahem, <a href="https://twitter.com/ghanbak" target="_blank" title="Ethan Macdonald on Twitter">@ghanbak</a>). It's usually because of a missing dependency or something trivial, but it always helps to see the output they get. Say the problem occurred when running `gulp build`. I can now ask my team member to simply run `gulp build | slackify -u atticus`, and I'll see the output they received.
+My favorite feature of Slackify. Every now and then I'll get a question from someone on the team why their build script failed (ahem, <a href="https://twitter.com/ghanbak" target="_blank" title="Ethan Macdonald on Twitter">@ghanbak</a>). It's usually because of a missing dependency or something trivial, but it always helps to see their output. Say the problem occurred when running `gulp build`. I can now ask my team member to simply run `gulp build | slackify -u atticus`, and I'll see the output they received. Simple.
 
 
 <div>
-  <img src="/dist/images/blog/slackify/slackify-stdin.png" style="display:inline;" />
-  <img src="/dist/images/blog/slackify/slackify-stdin-slack.png" style="display:inline;" />
+  <img src="/dist/images/blog/slackify/slackify-stdin.png"
+    alt="Slackify Terminal"
+    style="display:inline;" />
+  <img src="/dist/images/blog/slackify/slackify-stdin-slack.png"
+    alt="Slackify to Slack"
+    style="display:inline;" />
 </div>
 
-If Slackify is something you'd like to install or contribute to, you can find it on <a href="github.com/ajwhite/slackify" target="_blank" title="Slackify on Github">github.com/ajwhite/slackify</a>.
+If Slackify is something you'd like to install or contribute to, you can find it on <a href="https://github.com/ajwhite/slackify" target="_blank" title="Slackify on Github">github.com/ajwhite/slackify</a>.
