--- a/src/_posts/2016-02-28-slackify.md
+++ b/src/_posts/2016-02-28-slackify.md
@@ -6,7 +6,7 @@ permalink: /blog/node-slackify-cli
 project: https://github.com/ajwhite/slackify
 tags: [slack, nodejs, js]
 excerpt: A CLI tool to upload files, or pipe standard input, into Slack. As developers, we're already in our working directory in our console all day. Often we want to share a file, snippet, or some command output with someone on our team. With Slackify you can take a file, or pipe some output, right into Slack to a specific channel or user.
-seo_description: Upload a file or pipe standard input right from your CLI to Slack. Built with NodeJS and available on NPM.
+seo_description: Upload a file or pipe standard input right from your command line to Slack. A CLI tool with NodeJS and available on NPM.
 disqus_id: '2016-02-28-slackify'
 ---
 
@@ -18,7 +18,7 @@ disqus_id: '2016-02-28-slackify'
   alt="Slackify"
   style="width:100%; max-width: 100%; max-height: none;" />
 
-<a href="https://github.com/ajwhite/slackify" target="_blank" title="Slackify - Upload files with NodeJS to Slack from the CLI">Slackify</a> is a CLI tool for uploading files from your workspace, or piping standard input, to Slack. I've found myself frequently doing these things by hand. Whether it was copying console output, or dragging files, as a developer I don't want to deal with the GUI when what I want to share is right there in the console. If I can just pipe my output into Slack, I'll be happy for the day.
+<a href="https://github.com/ajwhite/slackify" target="_blank" title="Slackify - Upload files with NodeJS to Slack from the CLI">Slackify</a> is a command line tool for uploading files from your workspace, or piping standard input, to Slack. I've found myself frequently doing these things by hand. Whether it was copying console output, or dragging files, as a developer I don't want to deal with the GUI when what I want to share is right there in the console. If I can just pipe my output into Slack, I'll be happy for the day.
 
 
 
