--- a/src/_posts/2016-02-28-slackify.md
+++ b/src/_posts/2016-02-28-slackify.md
@@ -22,7 +22,7 @@ disqus_id: '2016-02-28-slackify'
 
 
 
-# Bringing the Slack to the CLI
+# Bringing Slack to the CLI
 
 You've got a file, `filename`, and you want to share it on channel, `channelname`.
 
